staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: klopapier-app
    labels:
        app: klopapier
    namespace: klopapier
spec:
    replicas: 1
    selector:
        matchLabels:
            app: klopapier
    template:
        metadata:
            labels:
                app: klopapier
        spec:
            volumes:
                - name: shared-mediafiles
                  persistentVolumeClaim:
                      claimName: klopapier-mediafiles-pvc
            containers:
                - name: nginx-container
                  image: nginx
                  ports:
                      - containerPort: 80
                        name: mediafiles-srv
                  volumeMounts:
                      - name: shared-mediafiles
                        mountPath: /usr/share/nginx/html/media
                - name: klopapier
                  image: ghcr.io/fstum/klopapiertool-v2-staging:main
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8000
                        name: gunicorn
                  volumeMounts:
                      - name: shared-mediafiles
                        mountPath: /code/media
