staging/svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: template_project-svc
    labels:
        app: template_project
spec:
    type: ClusterIP
    selector:
        app: template_project
    ports:
        - name: mediafiles-srv
          port: 7000
          targetPort: 80
        - name: gunicorn
          port: 8000
          targetPort: 8000
