staging/ingress-http.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: klopapier-ingress-http
    labels:
        app: klopapier
    namespace: klopapier
spec:
    entryPoints:
        - web
    routes:
        - kind: Rule
          match: Host(`klopapier.frank.elsinga.de`)
          services:
              - name: noop@internal
                kind: TraefikService
          middlewares:
              - name: https
