staging/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: klopapier-ingress
    labels:
        app: klopapier
    namespace: klopapier
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`klopapier.frank.elsinga.de`) && PathPrefix(`/media/`)
          priority: 11
          services:
              - name: klopapier-svc
                port: 7000
        - kind: Rule
          match: Host(`klopapier.frank.elsinga.de`)
          priority: 10
          services:
              - name: klopapier-svc
                port: 8000
    tls:
        secretName: klopapier.frank.elsinga.de
